objects/ASI_CRM_City__c.object
<CustomObject>
    <description>ASI_CRM_City</description>
    <fields>
        <fullName>ASI_CRM_CN_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>ASI_CRM_CN_Area__c</referenceTo>
        <relationshipLabel>City</relationshipLabel>
        <relationshipName>City</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_City_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN City</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>City</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_City_Tier__c</fullName>
        <label>City Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Province</label>
        <referenceTo>ASI_CRM_Province__c</referenceTo>
        <relationshipLabel>City</relationshipLabel>
        <relationshipName>City</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_T1_Located__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T1 Located</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <formula>ASI_CRM_CN_Area__r.ASI_CRM_Division__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Branch__c</fullName>
        <formula>Text(ASI_CRM_CN_Province__r.ASI_CRM_MY_Branch__c)</formula>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Region__c</fullName>
        <formula>Text(ASI_CRM_CN_Province__r.ASI_CRM_MY_Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Province_Name__c</fullName>
        <formula>ASI_CRM_CN_Province__r.ASI_CRM_English_Name__c</formula>
        <label>Province Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Stage_1_Preparation__c</fullName>
        <label>Stage 1 : Preparation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Stage_2_Internal_Process__c</fullName>
        <label>Stage 2: Internal Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Stage_3_Execution__c</fullName>
        <label>Stage 3: Execution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Task_1__c</fullName>
        <label>Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Task_2__c</fullName>
        <label>Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Task_3__c</fullName>
        <label>Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>ASI_CRM_CN_City</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ASI_CRM_CN_City_Tier__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_City_Code__c</columns>
        <columns>ASI_CRM_CN_Area__c</columns>
        <columns>ASI_CRM_CN_Province__c</columns>
        <columns>ASI_CRM_CN_City_Manager__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_City__c.ASI_CRM_CN_City</value>
        </filters>
        <label>CN City</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_City</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_City_Code__c</columns>
        <columns>ASI_CRM_CN_Province__c</columns>
        <columns>ASI_CRM_MY_Region__c</columns>
        <columns>ASI_CRM_MY_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_City__c.ASI_CRM_MY_City</value>
        </filters>
        <label>City (MY)</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Area__c</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_CN_City_Code__c</columns>
        <columns>ASI_CRM_CN_City_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_SC_City</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Lead_Time__c</columns>
        <columns>ASI_CRM_Stage_1_Preparation__c</columns>
        <columns>ASI_CRM_Task_1__c</columns>
        <columns>ASI_CRM_Stage_2_Internal_Process__c</columns>
        <columns>ASI_CRM_Task_2__c</columns>
        <columns>ASI_CRM_Stage_3_Execution__c</columns>
        <columns>ASI_CRM_Task_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_City__c.ASI_CRM_CN_City</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>北京,广州,成都,深圳,武汉,厦门,上海</value>
        </filters>
        <label>CN SC City</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>City</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_City</fullName>
        <active>true</active>
        <label>CN City</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_City</fullName>
        <active>true</active>
        <label>ASI CRM MY City</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>